# rampa

./: .gitignore  LICENSE  README.md
Ros/: readme.md
Ros/catkin_ws/: ReadMe.md
Ros/catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
Ros/catkin_ws/src/ur10_mover/: CMakeLists.txt  package.xml
Ros/catkin_ws/src/ur10_mover/launch/: server.launch  server_demo.launch
Ros/catkin_ws/src/ur10_mover/msg/: ListOfFloats.msg  ListOfPoses.msg
Ros/catkin_ws/src/ur10_mover/scripts/: contextual_learning.py  mover.py  one_euro_filter_test.py  plot.py  sample.txt  ur10_GMM_test.py  ur10_ProMP.py  ur10_interface.py
Ros/catkin_ws/src/ur10_mover/scripts/data/: Readme.md  data_1719509276985.txt  data_1719509297688.txt  data_1719509318315.txt  data_1719509366193.txt  data_1719576483298.txt
Ros/catkin_ws/src/ur10_mover/srv/: DiscardService.srv  ExecutionService.srv  GetTrainingDataService.srv  PlannerService.srv  SampleService.srv  TrainingDataService.srv
Ros/niryo_moveit/srv/: StateService.srv
Ros/srv/: MoverService.srv
Ros/ur10_moveit/scripts/: mover.py  ur10_cartesian_move.py  ur10_move.py  ur10_robot.py
Unity/Quest3XRSApp/: .gitignore  mono_crash.3ffca3660.0.json  mono_crash.3ffca3660.1.json  mono_crash.3ffca3660.2.json  mono_crash.3ffca3660.3.json  mono_crash.3ffca3660.4.json  mono_crash.3ffca3660.5.json  mono_crash.3ffca3660.6.json
Unity/Quest3XRSApp/Assets/: AdjustTransform.cs  ClearDebug.cs  CollisionDetection.cs  CollisionLog.cs  DrawService.cs  FixedRotation.cs  GetTransform.cs  Hand Passthrough.mat  HandleRecordAnother.cs  HandleRedrawButton.cs  (+10 more)
(+717 files in other folders)
